created customer index

--- a/app/customer/customers.component.html
+++ b/app/customer/customers.component.html
@@ -1,5 +1,5 @@
 <ul>
-    <li *ngFor="#customer of customers | async ">
+    <li *ngFor="#customer of customers ">
         <app-customer [customer]='customer'></app-customer>
     </li>
 </ul>
